# lil-schemy

./: .envrc  .gitignore  .mocharc.yaml  LICENSE  README.md  package-lock.json  package.json  result.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: continuous-integration.yml  release-candidate.yml  release.yml
example/: typeshift.js
example/src/routes/: user.ts
native/: Cargo.toml
native-debug/: .envrc  Cargo.toml
native-debug/src/: main.rs
native/src/: lib.rs  utils.rs
native/src/generators/: mod.rs
native/src/generators/open_api/: mod.rs  open_api_v3.rs
native/src/generators/open_api/typescript/: mod.rs  syntax_kind.rs
native/src/open_api/: add_paths.rs  caching.rs  declaration_helpers.rs  deferred.rs  deferred_schemas.rs  factory.rs  generate_schema.rs  generator.rs  generator_v2.rs  mod.rs  open_api.rs  schema.rs  symbol_table_helpers.rs
native/src/open_api/state/: caching.rs  declaration_table.rs  deferred.rs  mod.rs
native/src/typescript/: ast.rs  ast_cache.rs  ast_node.rs  cache.rs  declaration_table.rs  mod.rs  module_cache.rs  schemy_node.rs  source_file.rs  symbol_table.rs  syntax_kind.rs
native/src/typescript/node/: accessors.rs  children.rs  context.rs  mod.rs  node_kind.rs
native_v3/: Cargo.toml
native_v3/src/: lib.rs  messaging.rs  schemy.rs
native_v3/src/mappers/: mapper_bus.rs  mod.rs
native_v3/src/mappers/open_api/: mod.rs  options.rs  path_options.rs
native_v3/src/typescript/: application.rs  mod.rs  node.rs  node_kind.rs
native_v3/src/typescript/node/: children.rs  mod.rs
native_v3/src/typescript/symbol_tables/: mod.rs  store_symbol_maybe.rs
scripts/: build-addon.js
src/: index.ts  lil-schemy.ts  typeshift.ts  utils.ts
src/commands/: default-config.txt  generate.ts  init.ts
src/generator/: index.d.ts  index.js  x64-win32.node
tests/: cli.spec.ts  paths.spec.ts  result.json  tsconfig.json
tests/test-api/dtos/: index.ts  requests.ts
tests/test-api/routes/: animals.ts  requests.ts  router.ts  user.ts
