[package]
name = "typeshift"
version = "0.0.1"
edition = "2021"
authors = ["Joel C Rainear-Wills <starshiprdubb@gmail.com>"]
exclude = ["index.node"]
rust-version = "1.66.0"

[lib]
crate-type=["cdylib"]

[dependencies]
lazy_static = "1.4.0"
deno_ast = { version = "0.24.0", features = ["typescript", "swc_ecma_visit", "visit", "dep_graph"] }
url = "2.3.1"
es_resolve = "0.4.2"
ahash = "0.8.2"
serde_json = { version = "1.0.89", features = ["preserve_order"] }
serde = { version = "1.0.148", features = ["derive"] }
neon = { version = "0.10.1", default-features = false, features = ["napi-1"] }
dprint-swc-ext = { version = "0.7.0", features = ["view"] }

