[package]
name = "lil-schemy"
version = "0.0.1"
edition = "2021"
authors = ["Joel C Rainear-Wills <starshiprdubb@gmail.com>"]
exclude = ["index.node"]
rust-version = "1.66.0"

[lib]
crate-type=["cdylib"]

[dependencies]
lazy_static = "1.4.0"
url = "2.3.1"
es_resolve = "0.4.2"
ahash = "0.8.2"
serde_json = { version = "1.0.89", features = ["preserve_order"] }
serde = { version = "1.0.148", features = ["derive"] }
neon = { version = "0.10.1", default-features = false, features = ["napi-1"] }
swc_ecma_parser = "0.137.5"
swc_atoms = "0.5.8"
swc_common = { version = "0.31.18", features = ["tty-emitter"] }
swc_ecma_ast = "0.107.2"
